--- a/templates/main.html
+++ b/templates/main.html
@@ -15,11 +15,14 @@
     <!-- Google Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+
     <!-- CSS -->
     <link href="static/main.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
 
-    <script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
+
+    <!--<script type="autocomplete-input" src="../static/js/autocomplete.js"></script>-->
+    <!--<script type="text/javascript" src="{{ url_for('static', filename='static/js/app.js') }}"></script> -->
 
 	</head>
 
@@ -29,14 +32,30 @@
   <body background="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/{{ champ.name }}_0.jpg" class="bgimg">
   {% else %} -->
   <body>
-  <!-- {% endif %} -->
-    <div class="container">
-      <form class="col s12" action="{{ url_for('champ') }}" method="POST">
       <div class="row">
-        <input placeholder="Search for Champion" id="autocomplete-input"
-        class="autocomplete" type="text" name="Name">
+         <div class="col s12">
+           <div class="row">
+             <div class="input-field col s12">
+               <i class="material-icons prefix">textsms</i>
+               <input type="text" id="autocomplete-input" class="autocomplete">
+               <label for="autocomplete-input">Autocomplete</label>
+             </div>
+           </div>
+         </div>
+       </div>
+  <!-- {% endif %} -->
+  <div class="container">
+      <form autocomplete="off" class="col s12" action="{{ url_for('champ') }}" method="POST">
+      <div class="row">
+        <input type="text" id="autocomplete-input" class="autocomplete" name='Name' data-target="autocomplete-options">
+
+        <label for="autocomplete-input">Search for Champion</label>
+        <!--<input placeholder="Search for Champion" id="autocomplete"
+        class="autocomplete" type="text" name="Name"> -->
       </div>
     </form>
+
+
     {% if champ and champ[0] %}
     <h1>{{ champ[0].name }}</h1>
     {% for ability in champ[0].abilities %}
@@ -59,12 +78,15 @@
 
     <form class="col s12" action="{{ url_for('champ') }}" method="POST">
         <div class="row">
-          <input placeholder="Search for Item" class="autocomplete" type="text" name="Item">
+            <input type="text" id="autocomplete-input" class="autocomplete" name='Item'>
+            <label for="autocomplete-input">Search for Champion</label>
         </div>
     </form>
 
     {% if champ and champ[1] %}
     <h1>{{ champ[1].name }}</h1>
+    {% for item in champ[1] %}
+    <h1>item</h1>
     <div class="col s12 m8 offset-m2 l6 offset-l3">
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
@@ -83,8 +105,19 @@
     {% endif %}
 
     </div>
+</div>
   </body>
+  <script>
+  $(document).ready(function(){
+      $('input.autocomplete').autocomplete({
+          data: {"Yorick": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Yorick.png", "Vayne": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Vayne.png", "Vel'Koz": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Velkoz.png", "Lucian": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Lucian.png", "Vi": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Vi.png", "Aurelion Sol": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/AurelionSol.png", "Kindred": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kindred.png", "Rakan": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Rakan.png", "Lissandra": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Lissandra.png", "Singed": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Singed.png", "Nami": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Nami.png", "Ezreal": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ezreal.png", "Varus": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Varus.png", "Hecarim": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Hecarim.png", "Alistar": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Alistar.png", "Malphite": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Malphite.png", "Ivern": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ivern.png", "Maokai": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Maokai.png", "Akali": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Akali.png", "Darius": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Darius.png", "Fizz": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Fizz.png", "Taliyah": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Taliyah.png", "Ahri": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ahri.png", "Kha'Zix": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Khazix.png", "Rumble": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Rumble.png", "Zed": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Zed.png", "Ziggs": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ziggs.png", "Skarner": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Skarner.png", "Sion": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Sion.png", "Evelynn": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Evelynn.png", "Azir": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Azir.png", "Anivia": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Anivia.png", "Volibear": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Volibear.png", "Sona": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Sona.png", "Lulu": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Lulu.png", "Poppy": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Poppy.png", "Talon": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Talon.png", "Ashe": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ashe.png", "Graves": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Graves.png", "Tryndamere": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Tryndamere.png", "Jax": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Jax.png", "Thresh": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Thresh.png", "Kennen": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kennen.png", "Kassadin": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kassadin.png", "Fiora": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Fiora.png", "Galio": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Galio.png", "Tristana": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Tristana.png", "Xayah": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Xayah.png", "Pantheon": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Pantheon.png", "Kayn": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kayn.png", "Viktor": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Viktor.png", "Janna": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Janna.png", "Jhin": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Jhin.png", "Nasus": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Nasus.png", "Karthus": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Karthus.png", "Kayle": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kayle.png", "Rek'Sai": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/RekSai.png", "Annie": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Annie.png", "Cassiopeia": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Cassiopeia.png", "Heimerdinger": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Heimerdinger.png", "Zoe": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Zoe.png", "Soraka": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Soraka.png", "Taric": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Taric.png", "Cho'Gath": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Chogath.png", "Swain": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Swain.png", "Kalista": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kalista.png", "Xerath": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Xerath.png", "Fiddlesticks": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Fiddlesticks.png", "Brand": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Brand.png", "Aatrox": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Aatrox.png", "Quinn": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Quinn.png", "Blitzcrank": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Blitzcrank.png", "Draven": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Draven.png", "Caitlyn": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Caitlyn.png", "Syndra": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Syndra.png", "Twisted Fate": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/TwistedFate.png", "Illaoi": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Illaoi.png", "Dr. Mundo": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/DrMundo.png", "Jinx": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Jinx.png", "Lee Sin": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/LeeSin.png", "Lux": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Lux.png", "Ryze": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ryze.png", "Olaf": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Olaf.png", "Kled": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kled.png", "Zyra": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Zyra.png", "Bard": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Bard.png", "Orianna": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Orianna.png", "Amumu": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Amumu.png", "Urgot": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Urgot.png", "Nunu": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Nunu.png", "Teemo": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Teemo.png", "Irelia": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Irelia.png", "Camille": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Camille.png", "Nidalee": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Nidalee.png", "Gragas": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Gragas.png", "Kog'Maw": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/KogMaw.png", "Shaco": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Shaco.png", "Jayce": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Jayce.png", "Gangplank": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Gangplank.png", "Riven": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Riven.png", "Veigar": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Veigar.png", "Jarvan IV": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/JarvanIV.png", "Yasuo": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Yasuo.png", "Corki": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Corki.png", "Xin Zhao": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/XinZhao.png", "Vladimir": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Vladimir.png", "Ornn": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ornn.png", "Nocturne": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Nocturne.png", "Wukong": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/MonkeyKing.png", "Elise": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Elise.png", "Garen": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Garen.png", "Udyr": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Udyr.png", "Leona": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Leona.png", "Ekko": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Ekko.png", "Braum": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Braum.png", "Gnar": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Gnar.png", "Twitch": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Twitch.png", "Renekton": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Renekton.png", "Trundle": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Trundle.png", "Sivir": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Sivir.png", "Rammus": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Rammus.png", "Shyvana": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Shyvana.png", "Tahm Kench": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/TahmKench.png", "Mordekaiser": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Mordekaiser.png", "Rengar": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Rengar.png", "Nautilus": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Nautilus.png", "Malzahar": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Malzahar.png", "Morgana": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Morgana.png", "Miss Fortune": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/MissFortune.png", "Zilean": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Zilean.png", "Kai'Sa": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Kaisa.png", "LeBlanc": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Leblanc.png", "Katarina": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Katarina.png", "Warwick": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Warwick.png", "Sejuani": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Sejuani.png", "Diana": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Diana.png", "Shen": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Shen.png", "Karma": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Karma.png", "Zac": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/Zac.png", "Master Yi": "http://ddragon.leagueoflegends.com/cdn/8.6.1/img/champion/MasterYi.png"
+          },
+          limit: 10,
+          minLength: 1
+      });
+  });
 
+   </script>
 	<!-- Custom JS -->
 
 </html>
