Fixed Champ Name

--- a/templates/item.html
+++ b/templates/item.html
@@ -31,7 +31,7 @@
                 </div>
             </form>
             {% if champ and champ[0] %}
-            <h1>{{ champ[0].name }}</h1>
+            <h1>{{ champ[0].id }}</h1>
             {% for ability in champ[0].abilities %}
             <div class="col s12 m8 offset-m2 l6 offset-l3">
                 <div class="card-panel grey lighten-5 z-depth-1">
