--- a/templates/item.html
+++ b/templates/item.html
@@ -47,11 +47,14 @@
                 <h1>{{ champ[0].id }}</h1>
                 <div class="col s12 m8 offset-m2 l6 offset-l3">
                 {% for ability in champ[0].abilities %}
-
                     <div class="card-panel grey lighten-5 z-depth-1">
                         <div class="row valign-wrapper">
                             <div class="col s2">
+                                {% if ability[1].startswith("http") %}
+                                <img src="{{ ability[1] }}" alt="" class="circle responsive-img">
+                                {% else %}
                                 <img src="/static/{{ ability[1] }}" alt="" class="circle responsive-img">
+                                {% endif %}
                             </div>
                             <div class="col s10">
                                 <!-- <span class="black-text"> -->
