--- a/static/item.css
+++ b/static/item.css
@@ -12,3 +12,12 @@
 .color99FF99 {
     color: #0C48C9;
 }
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+main {
+    flex: 1 0 auto;
+}
