--- a/templates/item.html
+++ b/templates/item.html
@@ -6,8 +6,8 @@
 
 <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-
 <!-- Compiled and minified JavaScript -->
+    <link rel="stylesheet" src="../static/item.css">
 <!-- Compiled and minified CSS -->
     <!-- Compiled and minified JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -23,30 +23,30 @@
 
 
 <body>
-    <div class="container">
-        <div class="row">
-            {% if champ and champ[2] == '2' %}
-            <form autocomplete="off" class="col s12" action="{{ url_for('edit', num=2) }}" method="POST">
-            {% else %}
-            <form autocomplete="off" class="col s12" action="{{ url_for('edit', num=1) }}" method="POST">
-            {% endif %}
-                <div class="col s12">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">textsms</i>
-                            <input type="text" id="autocomplete-input-champ" class="autocomplete" name='Name'>
-                            <label for="autocomplete-input-champ">Search for Champion</label>
+    <div class="row">
+        <div class="col s12 m9 l10">
+                {% if champ and champ[2] == '2' %}
+                <form id="champsearch" autocomplete="off" class="col s12 section scrollspy" action="{{ url_for('edit', num=2) }}" method="POST">
+                {% else %}
+                <form id="champsearch" autocomplete="off" class="col s12 section scrollspy" action="{{ url_for('edit', num=1) }}" method="POST">
+                {% endif %}
+                    <div class="col s12">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">textsms</i>
+                                <input type="text" id="autocomplete-input-champ" class="autocomplete" name='Name'>
+                                <label for="autocomplete-input-champ">Search for Champion</label>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </form>
-        </div>
+                </form>
+
+
             {% if champ and champ[0] %}
 
-                <div class="row">
-                <h1>{{ champ[0].id }}</h1>
-                <div class="col s12 m8 offset-m2 l6 offset-l3">
-                {% for ability in champ[0].abilities %}
+                <div id="champdisplay" class="col s12 m8 offset-m2 l6 offset-l3 section scrollspy">
+                    <h1>{{ champ[0].id }}</h1>
+                    {% for ability in champ[0].abilities %}
                     <div class="card-panel grey lighten-5 z-depth-1">
                         <div class="row valign-wrapper">
                             <div class="col s2">
@@ -57,23 +57,22 @@
                                 {% endif %}
                             </div>
                             <div class="col s10">
-                                <!-- <span class="black-text"> -->
+                                 <span class="black-text">
                                 {{ ability[0]|safe }}
-                                <!-- </span> -->
+                                 </span>
                             </div>
                         </div>
                     </div>
-                {% endfor %}
+                    {% endfor %}
                 </div>
-            </div>
 
             {% endif %}
 
-        <div class="row">
+
             {% if champ and champ[2] == '2' %}
-            <form autocomplete="off" class="col s12" action="{{ url_for('edit', num=2) }}" method="POST">
+            <form id="itemsearch" autocomplete="off" class="col s12 section scrollspy" action="{{ url_for('edit', num=2) }}" method="POST">
             {% else %}
-            <form autocomplete="off" class="col s12" action="{{ url_for('edit', num=1) }}" method="POST">
+            <form id="itemsearch" autocomplete="off" class="col s12 section scrollspy" action="{{ url_for('edit', num=1) }}" method="POST">
             {% endif %}
                 <div class="col s12">
                     <div class="row">
@@ -85,38 +84,51 @@
                     </div>
                 </div>
             </form>
-        </div>
-        {% if champ and champ[1] %}
-        {% for key, value in champ[1].items() %}
-        <div class="row">
-            <h1>{{ key }}</h1>
-            <div class="col s12 m8 offset-m2 l6 offset-l3">
-                <div class="card-panel grey lighten-5 z-depth-1">
-                    <div class="row valign-wrapper">
-                        <div class="col s2">
-                            <img src="/static/item_icons/{{ champ[1][key].id }}.png" alt="" class="circle responsive-img">
-                        </div>
-                        <div class="col s10">
-                            <!-- <span class="black-text"> -->
-                            {{ champ[1][key]["description"]|safe }}
-                            <!-- </span> -->
+
+            {% if champ and champ[1] %}
+            {% for key, value in champ[1].items() %}
+                <div id="{{ key }}" class="col s12 m8 offset-m2 l6 offset-l3 section scrollspy">
+                    <h1>{{ key }}</h1>
+                    <div class="card-panel grey lighten-5 z-depth-1">
+                        <div class="row valign-wrapper">
+                            <div class="col s2">
+                                <img src="/static/item_icons/{{ champ[1][key].id }}.png" alt="" class="circle responsive-img">
+                            </div>
+                            <div class="col s10">
+                                {{ champ[1][key]["description"]|safe }}
+                            </div>
                         </div>
                     </div>
+                    <div class= "delete-item">
+                        {% if champ and champ[2] == '2' %}
+                        <form method='POST' action="{{ url_for('delete', num=2) }}">
+                        {% else %}
+                        <form method='POST' action="{{ url_for('delete', num=1) }}">
+                        {% endif %}
+                            <button name="{{ key }}" class="btn waves-effect waves-light btn-large red"><i class="material-icons left">delete</i>Delete Item</button>
+                        </form>
+                    </div>
                 </div>
-                <div class= "delete-item">
-                    {% if champ and champ[2] == '2' %}
-                    <form method='POST' action="{{ url_for('delete', num=2) }}">
-                    {% else %}
-                    <form method='POST' action="{{ url_for('delete', num=1) }}">
+            {% endfor %}
+            {% endif %}
+        </div>
+
+        <div class="col hide-on-small-only m3 l2">
+            <div class="toc-wrapper">
+                <ul class="section table-of-contents" style="position: fixed; right:50px">
+                    <li><a href="#champsearch"><b>Select a Champion</b></a></li>
+                    {% if champ and champ[0] %}
+                    <li><a href="#champdisplay">{{ champ[0].id }}</a></li>
                     {% endif %}
-                        <button name="{{ key }}" class="btn waves-effect waves-light btn-large red"><i class="material-icons left">delete</i>Delete Item</button>
-                    <!--<a href="/exec" class="waves-effect waves-light btn-large red"><i class="material-icons left">delete</i>Delete Item</a> -->
-                    </form>
-                </div>
+                    <li><a href="#itemsearch"><b>Add an Item</b></a></li>
+                    {% if champ and champ[1] %}
+                    {% for key, value in champ[1].items() %}
+                    <li><a href="#{{ key }}">{{ key }}</a></li>
+                    {% endfor %}
+                    {% endif %}
+                </ul>
             </div>
         </div>
-        {% endfor %}
-        {% endif %}
     </div>
 </body>
 
