--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>LoL Burst</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -9,6 +11,10 @@
 <script type="text/javascript" src="{{ url_for('static',filename='js/loading.js') }}"></script>
 
 <body>
-    <p>This is the stats page</p>
+    <p>stats page</p>
 </body>
+
+
+<script type="text/javascript" src="{{ url_for('static',filename='js/autocomplete.js') }}"></script>
+
 </html>
