Updated jsons and set up framework for About Page

--- a/templates/info.html
+++ b/templates/info.html
@@ -8,6 +8,37 @@
 </head>
 <script type="text/javascript" src="{{ url_for('static',filename='js/loading.js') }}"></script>
 <body>
-    <p>This is the info page</p>
+    <div class="row">
+    </div>
+    <div class="row">
+    <div class="col s12 m6">
+      <div class="card red lighten-3">
+        <div class="card-content white-text">
+          <span class="card-title">Timothy Blazek</span>
+          <p>Bio</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card red lighten-3">
+        <div class="card-content white-text">
+          <span class="card-title">Noah Yoshida</span>
+          <p>Bio</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card red lighten-3">
+        <div class="card-content white-text">
+          <span class="card-title">Edward Atkinson</span>
+          <p>Bio</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
