Added initial dropdown infrastructure

--- a/templates/item.html
+++ b/templates/item.html
@@ -35,6 +35,9 @@
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">textsms</i>
                                 <input type="text" id="autocomplete-input-champ" class="autocomplete" name='Name'>
+                                <ul id="autocomplete-options-champ" class="dropdown-content" tabindex="0"
+                                    style="display: block; opacity: 1; transform: scaleX(1) scaleY(1); width: 555px; left: 10.5px; top: 43px; height 50px; transform-origin: 0px 0px 0px;">
+                                </ul>
                                 <label for="autocomplete-input-champ">Search for Champion</label>
                             </div>
                         </div>
