--- a/templates/item.html
+++ b/templates/item.html
@@ -32,13 +32,13 @@
                 {% endif %}
                     <div class="col s12">
                         <div class="row">
-                            <div class="input-field col s12">
+                            <div class="input-field col s10">
                                 <i class="material-icons prefix">textsms</i>
                                 <input type="text" id="autocomplete-input-champ" class="autocomplete" name='Name'>
-                                <ul id="autocomplete-options-champ" class="dropdown-content" tabindex="0"
-                                    style="display: block; opacity: 1; transform: scaleX(1) scaleY(1); width: 555px; left: 10.5px; top: 43px; height 50px; transform-origin: 0px 0px 0px;">
-                                </ul>
                                 <label for="autocomplete-input-champ">Search for Champion</label>
+                            </div>
+                            <div class="input-field col s2">
+
                             </div>
                         </div>
                     </div>
@@ -79,10 +79,12 @@
             {% endif %}
                 <div class="col s12">
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="input-field col s10">
                             <i class="material-icons prefix">textsms</i>
                             <input type="text" id="autocomplete-input-item" class="autocomplete" name='Item'>
                             <label for="autocomplete-input-item">Search for Item</label>
+                        </div>
+                        <div class="input-field col s2">
                         </div>
                     </div>
                 </div>
