--- a/templates/item.html
+++ b/templates/item.html
@@ -7,7 +7,7 @@
 <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 <!-- Compiled and minified JavaScript -->
-    <link rel="stylesheet" src="../static/item.css">
+    <link rel="stylesheet" href="/static/item.css">
 <!-- Compiled and minified CSS -->
     <!-- Compiled and minified JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -32,13 +32,12 @@
                 {% endif %}
                     <div class="col s12">
                         <div class="row">
-                            <div class="input-field col s10">
+                            <div class="input-field col s9">
                                 <i class="material-icons prefix">textsms</i>
                                 <input type="text" id="autocomplete-input-champ" class="autocomplete" name='Name'>
                                 <label for="autocomplete-input-champ">Search for Champion</label>
                             </div>
-                            <div class="input-field col s2">
-
+                            <div class="input-field col s3">
                             </div>
                         </div>
                     </div>
@@ -79,12 +78,12 @@
             {% endif %}
                 <div class="col s12">
                     <div class="row">
-                        <div class="input-field col s10">
+                        <div class="input-field col s9">
                             <i class="material-icons prefix">textsms</i>
                             <input type="text" id="autocomplete-input-item" class="autocomplete" name='Item'>
                             <label for="autocomplete-input-item">Search for Item</label>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="input-field col s3">
                         </div>
                     </div>
                 </div>
