--- a/static/item.css
+++ b/static/item.css
@@ -23,6 +23,23 @@ main {
     flex: 1 0 auto;
 }
 
+li.autocomplete-option {
+    padding: 5px;
+    margin-bottom: 5px;
+    box-shadow: 0px 5px #CCCCCC;
+    height: 100%;
+    display: inline-block;
+}
+
+li.autocomplete-option span {
+    height: 100%;
+}
+
+li.autocomplete-option img  {
+    float: right;
+    max-height: 100%;
+}
+
 /*
 input[type="checkbox"],input[type="radio"]{
     position: static !important;
