--- a/static/item.css
+++ b/static/item.css
@@ -17,22 +17,46 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    overflow: scroll;
   }
 
 main {
     flex: 1 0 auto;
 }
 
+ul.autocomplete-dropdown {
+    display: block;
+    opacity: 1;
+    transform: scaleX(1) scaleY(1);
+    width: 96%;
+    left: 2%;
+    top: 45px;
+    height 50px;
+    transform-origin: 0px 0px 0px;
+    font-size: 20px;
+}
+
 li.autocomplete-option {
     padding: 5px;
-    margin-bottom: 5px;
-    box-shadow: 0px 5px #CCCCCC;
+    margin-bottom: 4px;
+    box-shadow: 0px 5px #757575;
+    border-style: solid;
+    border-color: #26A69A; /*#757575;*/
+    border-width: 2px 4px;
+    border-radius: 10px;
     height: 100%;
+    width: 100%;
+    min-width: 100%;
     display: inline-block;
 }
 
 li.autocomplete-option span {
     height: 100%;
+    color: black;
+}
+
+li.autocomplete-option .autocomplete-match {
+    color: #26A69A;
 }
 
 li.autocomplete-option img  {
