Added gold to stats

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -29,7 +29,7 @@
           <p>Health: {{ stats[0].hp }}</p>
           <p>Mana Pool: {{ stats[0].mp }}</p>
           <p>Movement Speed: {{ stats[0].movespeed }}</p>
-
+          <p style="color:gold">Gold Spent: {{ stats[0].gold }}</p>
         </div>
       </div>
     </div>
@@ -50,6 +50,7 @@
               <p>Health: {{ stats[1].hp }}</p>
               <p>Mana Pool: {{ stats[1].mp }}</p>
               <p>Movement Speed: {{ stats[1].movespeed }}</p>
+              <p style="color:gold">Gold Spent: {{ stats[1].gold }}</p>
           </div>
         </div>
       </div>
