--- a/static/item.css
+++ b/static/item.css
@@ -31,7 +31,6 @@ ul.autocomplete-dropdown {
     width: 96%;
     left: 2%;
     top: 45px;
-    height 50px;
     transform-origin: 0px 0px 0px;
     font-size: 20px;
 }
@@ -44,14 +43,13 @@ li.autocomplete-option {
     border-color: #26A69A; /*#757575;*/
     border-width: 2px 4px;
     border-radius: 10px;
-    height: 100%;
     width: 100%;
     min-width: 100%;
     display: inline-block;
 }
 
-li.autocomplete-option span {
-    height: 100%;
+li.autocomplete-option div {
+    height: 75px;
     color: black;
 }
 
@@ -61,6 +59,7 @@ li.autocomplete-option .autocomplete-match {
 
 li.autocomplete-option img  {
     float: right;
+    height: 100%;
     max-height: 100%;
 }
 
