ability power added to stats page

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -24,6 +24,7 @@
           <p>Attack Speed: {{ stats[0].attackspeed }}</p>
           <p>Critical Strike Percent: {{ stats[0].crit }}</p>
           <p>Attack Damage: {{ stats[0].attackdamage }}</p>
+          <p>Ability Power: {{ stats[0].magicdamage }}</p>
           <p>Armor: {{ stats[0].armor }}</p>
           <p>Magic Resistance: {{ stats[0].spellblock }}</p>
           <p>Health: {{ stats[0].hp }}</p>
@@ -45,6 +46,7 @@
               <p>Attack Speed: {{ stats[1].attackspeed }}</p>
               <p>Critical Strike Percent: {{ stats[1].crit }}</p>
               <p>Attack Damage: {{ stats[1].attackdamage }}</p>
+              <p>Ability Power: {{ stats[1].magicdamage }}</p>
               <p>Armor: {{ stats[1].armor }}</p>
               <p>Magic Resistance: {{ stats[1].spellblock }}</p>
               <p>Health: {{ stats[1].hp }}</p>
