--- a/templates/info.html
+++ b/templates/info.html
@@ -15,7 +15,8 @@
       <div class="card red lighten-3">
         <div class="card-content white-text">
           <span class="card-title">Timothy Blazek</span>
-          <p>Bio</p>
+          <p>Plays League</p>
+          <p>Lives in Morrissey</p>
         </div>
       </div>
     </div>
@@ -25,7 +26,8 @@
       <div class="card red lighten-3">
         <div class="card-content white-text">
           <span class="card-title">Noah Yoshida</span>
-          <p>Bio</p>
+          <p>Plays League</p>
+          <p>Lives in Morrissey also</p>
         </div>
       </div>
     </div>
@@ -35,7 +37,8 @@
       <div class="card red lighten-3">
         <div class="card-content white-text">
           <span class="card-title">Edward Atkinson</span>
-          <p>Bio</p>
+          <p>Doesn't play league</p>
+          <p>Lives in Dillon</p>
         </div>
       </div>
     </div>
