--- a/templates/info.html
+++ b/templates/info.html
@@ -8,6 +8,7 @@
 </head>
 <script type="text/javascript" src="{{ url_for('static',filename='js/loading.js') }}"></script>
 <body>
+<div class="container">
     <div class="row">
     </div>
     <div class="row">
@@ -37,11 +38,12 @@
       <div class="card red lighten-3">
         <div class="card-content white-text">
           <span class="card-title">Edward Atkinson</span>
-          <p>Doesn't play league</p>
+          <p>Doesn't play League</p>
           <p>Lives in Dillon</p>
         </div>
       </div>
     </div>
+  </div>
   </div>
 </body>
 </html>
