--- a/templates/info.html
+++ b/templates/info.html
@@ -12,7 +12,7 @@
     <div class="row">
     </div>
     <div class="row">
-    <div class="col s12 m6">
+    <div class="col m6 offset-m3">
       <div class="card red lighten-3">
         <div class="card-content white-text">
           <span class="card-title">Timothy Blazek</span>
@@ -20,21 +20,21 @@
           <p>Lives in Morrissey</p>
         </div>
       </div>
-    </div>
+      </div>
   </div>
   <div class="row">
-    <div class="col s12 m6">
+    <div class="col m6 offset-m3">
       <div class="card red lighten-3">
         <div class="card-content white-text">
           <span class="card-title">Noah Yoshida</span>
           <p>Plays League</p>
           <p>Lives in Morrissey also</p>
         </div>
-      </div>
+        </div>
     </div>
   </div>
   <div class="row">
-    <div class="col s12 m6">
+    <div class="col m6 offset-m3">
       <div class="card red lighten-3">
         <div class="card-content white-text">
           <span class="card-title">Edward Atkinson</span>
